force-app/main/default/objects/Route__c/fields/Predefined_Area__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Area__c</fullName>
    <label>Predefined Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>