force-app/main/default/objects/Route__c/fields/Route_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Route_Name_del__c</fullName>
    <label>Route Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTM Layout</fullName>
            </value>
            <value>
                <fullName>HSR Layout</fullName>
            </value>
            <value>
                <fullName>Sarjapur</fullName>
            </value>
            <value>
                <fullName>JP Nagar</fullName>
            </value>
            <value>
                <fullName>Jaya Nagar</fullName>
            </value>
            <value>
                <fullName>Uttam Nagar</fullName>
            </value>
            <value>
                <fullName>Janak Puri</fullName>
            </value>
            <value>
                <fullName>Tilak Pul</fullName>
            </value>
            <value>
                <fullName>Jeevan Park</fullName>
            </value>
            <value>
                <fullName>Dabri More</fullName>
            </value>
            <value>
                <fullName>Seetapuri extension</fullName>
            </value>
            <value>
                <fullName>BrokeField</fullName>
                <isActive>false</isActive>
                <label>BrokeField</label>
            </value>
            <value>
                <fullName>Cabbon Park</fullName>
                <isActive>false</isActive>
                <label>Cabbon Park</label>
            </value>
            <value>
                <fullName>Electronic City</fullName>
                <isActive>false</isActive>
                <label>Electronic City</label>
            </value>
            <value>
                <fullName>Hebbal</fullName>
                <isActive>false</isActive>
                <label>Hebbal</label>
            </value>
            <value>
                <fullName>KR Puram</fullName>
                <isActive>false</isActive>
                <label>KR Puram</label>
            </value>
            <value>
                <fullName>Kormangala</fullName>
                <isActive>false</isActive>
                <label>Kormangala</label>
            </value>
            <value>
                <fullName>LalBagh</fullName>
                <isActive>false</isActive>
                <label>LalBagh</label>
            </value>
            <value>
                <fullName>MG Road</fullName>
                <isActive>false</isActive>
                <label>MG Road</label>
            </value>
            <value>
                <fullName>MICO Layout</fullName>
                <isActive>false</isActive>
                <label>MICO Layout</label>
            </value>
            <value>
                <fullName>Madiwala</fullName>
                <isActive>false</isActive>
                <label>Madiwala</label>
            </value>
            <value>
                <fullName>Marathalli</fullName>
                <isActive>false</isActive>
                <label>Marathalli</label>
            </value>
            <value>
                <fullName>Panduranga Nagar</fullName>
                <isActive>false</isActive>
                <label>Panduranga Nagar</label>
            </value>
            <value>
                <fullName>Richmond Circle</fullName>
                <isActive>false</isActive>
                <label>Richmond Circle</label>
            </value>
            <value>
                <fullName>Whitefield</fullName>
                <isActive>false</isActive>
                <label>Whitefield</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>