force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Predefined_Area__c</columns>
    <columns>Route_Name_del__c</columns>
    <columns>Sales_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>